--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // 🌐 Import Google Fonts
-@import url("https://fonts.bunny.net/css?family=Nunito");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
@@ -19,6 +19,7 @@
 // 🎨 Custom CSS
 
 :root {
+    --bs-body-font-family: "Roboto", sans-serif;
     --white: #ffffff;
     --black: #{$neuture-950};
     --success: #{$success-500};
@@ -27,7 +28,7 @@
     --background: var(--white);
     --foreground: #{$neuture-950};
     --muted: #{$neuture-100};
-    --muted-foreground: #{$neuture};
+    --muted-foreground: #{$neuture-500};
     --card: var(--white);
     --card-foreground: #{$neuture-950};
     --popver: var(--white);
@@ -69,58 +70,148 @@
     line-height: normal;
 }
 
+a {
+    text-decoration: none;
+}
+
 .dashboard {
     background-color: var(--background);
 
-    .card-list {
-        .card-item {
-            .item {
-                background-color: #{$neuture-50};
-                padding: 24px;
-                border-radius: 8px;
-                &.danger {
-                    background: radial-gradient(
-                            circle,
-                            #{$danger-300},
-                            #{$danger-600}
-                        ),
-                        radial-gradient(circle, #{$danger-700}, #{$danger-200});
-                }
-                h4 {
-                    font-size: 16px;
-                    color: #{$neuture-700};
-                }
+    .statistics-card {
+        .card-list {
+            .card-item {
+                .item {
+                    background-color: var(--muted);
+                    padding: 24px;
+                    border-radius: 8px;
+                    cursor: pointer;
 
-                span {
-                    font-size: 28px;
-                    display: block;
-                    color: var(--foreground);
-                    margin-bottom: 6px;
-                }
+                    &:hover {
+                        transform: translateY(-10px);
+                        transition: all 0.1s linear;
+                    }
 
-                .icon {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 14px;
-                    margin-right: 24px;
-                }
+                    .title {
+                        font-size: 14px;
+                        color: var(--muted-foreground);
+                    }
 
-                &.primary {
+                    .value {
+                        font-size: 28px;
+                        display: block;
+                        color: var(--foreground);
+                        margin-bottom: 6px;
+                    }
+
                     .icon {
-                        background: #{$primary-200};
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 60px;
+                        height: 60px;
+                        padding: 0;
+                        border-radius: 50%;
+                    }
+
+                    .icon {
+                        background-color: #{$primary-500};
+                        flex-shrink: 0;
                         svg {
-                            color: #{$primary-500};
+                            width: 24px;
+                            height: 24px;
+                            color: var(--white);
+                        }
+                    }
+
+                    .content {
+                        flex-grow: 1;
+                        min-width: 0;
+
+                        @media screen and (min-width: 768px) and (max-width: 991px) {
+                            .value {
+                                font-size: 20px;
+                            }
+
+                            .title {
+                                font-size: 12px;
+                            }
+                        }
+                    }
+
+                    &.primary {
+                        .icon {
+                            background-color: #{$primary-500};
+                        }
+                    }
+                    &.secondary {
+                        .icon {
+                            background-color: #{$secondary-500};
+                        }
+                    }
+
+                    &.success {
+                        .icon {
+                            background-color: #{$success-500};
+                        }
+                    }
+
+                    &.danger {
+                        .icon {
+                            background-color: #{$danger-500};
+                        }
+                    }
+
+                    &.warning {
+                        .icon {
+                            background-color: #{$warning-500};
+                        }
+                    }
+
+                    &.neuture {
+                        .icon {
+                            background-color: #{$neuture-500};
                         }
                     }
                 }
             }
         }
     }
+
+    .statistics-chart {
+        .chart-item {
+            background-color: var(--muted);
+            padding: 24px;
+            border-radius: 8px;
+        }
+    }
+
+    .statistics-products {
+        .title {
+
+        }
+        .product {
+            background-color: var(--muted);
+            padding: 24px;
+            height: 210px;
+
+            &.combo {
+                height: 120px;
+            }
+
+
+            .card-body {
+                padding: 0;
+
+                .quantity {
+                    color: var(--danger);
+                }
+            }
+
+        }
+    }
 }
 
 .selectLocation {
-
     .ts-control {
         border: none !important;
     }
@@ -399,6 +490,96 @@
         }
     }
 }
+
+.card-product {
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+
+    .card-header {
+        background-color: #f1f1f1;
+        border-bottom: 1px solid #e0e0e0;
+        padding: 15px 20px;
+    }
+
+    .accordion-button {
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px;
+        width: 100%;
+        text-align: left;
+
+        &:focus {
+            box-shadow: none;
+            border-color: #007bff;
+        }
+
+        .d-flex {
+            gap: 15px;
+        }
+    }
+
+    .accordion-button:not(.collapsed) {
+        background-color: #007bff;
+        color: #fff;
+    }
+
+    .accordion-item {
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        margin-bottom: 15px;
+        background-color: #fff;
+    }
+
+    .accordion-collapse {
+        padding: 20px;
+        background-color: #fafafa;
+        border-top: 1px solid #ddd;
+    }
+
+    .product-title {
+        font-weight: bold;
+        font-size: 1.1rem;
+        color: #333;
+    }
+
+    .product-description {
+        font-size: 0.9rem;
+        color: #777;
+    }
+
+    .image-product-combo {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    .sku-price, .sku-promotion-price, .sku-quantity {
+        display: block;
+        font-size: 1rem;
+        margin: 5px 0;
+    }
+
+    .sku-price {
+        color: #333;
+    }
+
+    .sku-promotion-price {
+        color: #d9534f;
+        font-weight: bold;
+    }
+
+    .sku-quantity {
+        color: #5bc0de;
+    }
+
+    .form-check-input {
+        margin-top: 10px;
+    }
+}
+
 
 .setting {
     .avatar-setting {
