--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -37,9 +37,10 @@
     --input: #{$neuture-200};
     --primary: #{$primary-500};
     --primary-foreground: #{$primary-50};
-    --secondary: #{$secondary};
+    --secondary: #{$secondary-500};
     --secondary-foreground: #{$secondary-50};
     --cat-depth: 0;
+    --background-main: #{$neuture-50};
 }
 
 [data-theme="dark"] {
@@ -59,6 +60,7 @@
     --primary-foreground: #{$primary-50};
     --secondary: #{$secondary};
     --secondary-foreground: #{$secondary-50};
+    --background-main: #{$neuture-950};
 }
 
 *,
@@ -68,6 +70,17 @@
     margin: 0;
     box-sizing: border-box;
     line-height: normal;
+}
+
+
+#wrapper #content-wrapper {
+    background-color: var(--background-main);
+    width: 100%;
+    overflow-x: hidden
+}
+
+#wrapper #content-wrapper #content {
+    flex: 1 0 auto
 }
 
 a {
@@ -192,7 +205,7 @@ a {
         .product {
             background-color: var(--muted);
             padding: 24px;
-            height: 210px;
+            min-height: 210px;
 
             &.combo {
                 height: 120px;
@@ -229,6 +242,23 @@ a {
 .modules {
     background-color: var(--muted);
     border-radius: 16px;
+}
+
+.tab-dashboard {
+    
+    .nav-tabs {
+
+        .nav-item {
+
+            .nav-link {
+                color: var(--secondary);
+
+                &.active {
+                    color: var(--primary);
+                }
+            }
+        }
+    }
 }
 
 #attributes-pane {
@@ -491,96 +521,6 @@ a {
     }
 }
 
-.card-product {
-    border: 1px solid #e0e0e0;
-    border-radius: 10px;
-    background-color: #f9f9f9;
-
-    .card-header {
-        background-color: #f1f1f1;
-        border-bottom: 1px solid #e0e0e0;
-        padding: 15px 20px;
-    }
-
-    .accordion-button {
-        background-color: #fff;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        padding: 10px;
-        width: 100%;
-        text-align: left;
-
-        &:focus {
-            box-shadow: none;
-            border-color: #007bff;
-        }
-
-        .d-flex {
-            gap: 15px;
-        }
-    }
-
-    .accordion-button:not(.collapsed) {
-        background-color: #007bff;
-        color: #fff;
-    }
-
-    .accordion-item {
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        margin-bottom: 15px;
-        background-color: #fff;
-    }
-
-    .accordion-collapse {
-        padding: 20px;
-        background-color: #fafafa;
-        border-top: 1px solid #ddd;
-    }
-
-    .product-title {
-        font-weight: bold;
-        font-size: 1.1rem;
-        color: #333;
-    }
-
-    .product-description {
-        font-size: 0.9rem;
-        color: #777;
-    }
-
-    .image-product-combo {
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-        border-radius: 5px;
-    }
-
-    .sku-price, .sku-promotion-price, .sku-quantity {
-        display: block;
-        font-size: 1rem;
-        margin: 5px 0;
-    }
-
-    .sku-price {
-        color: #333;
-    }
-
-    .sku-promotion-price {
-        color: #d9534f;
-        font-weight: bold;
-    }
-
-    .sku-quantity {
-        color: #5bc0de;
-    }
-
-    .form-check-input {
-        margin-top: 10px;
-    }
-}
-
-
 .setting {
     .avatar-setting {
         width: 200px;
@@ -754,4 +694,8 @@ a.sidebar-children {
 
 .sortable {
     cursor: grab;
+}
+
+.card-setting {
+    border-radius: 16px;
 }
