--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -79,15 +79,14 @@
     }
 }
 
-
 #wrapper #content-wrapper {
     background-color: var(--background-main);
     width: 100%;
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 #wrapper #content-wrapper #content {
-    flex: 1 0 auto
+    flex: 1 0 auto;
 }
 
 a {
@@ -95,15 +94,15 @@ a {
 }
 
 .dashboard {
-    background-color: var(--background);
-
     .statistics-card {
         .card-list {
             .card-item {
                 .item {
-                    background-color: var(--muted);
+                    background-color: var(--background);
                     padding: 24px;
                     border-radius: 8px;
+
+                    border: 1px solid var(--muted) !important;
                     cursor: pointer;
 
                     &:hover {
@@ -199,7 +198,7 @@ a {
 
     .statistics-chart {
         .chart-item {
-            background-color: var(--muted);
+            background-color: var(--background);
             padding: 24px;
             border-radius: 8px;
         }
@@ -207,17 +206,16 @@ a {
 
     .statistics-products {
         .title {
-
         }
         .product {
-            background-color: var(--muted);
+            background-color: var(--background);
             padding: 24px;
             min-height: 210px;
+            border: 1px solid var(--muted) !important;
 
             &.combo {
                 height: 120px;
             }
-
 
             .card-body {
                 padding: 0;
@@ -226,7 +224,39 @@ a {
                     color: var(--danger);
                 }
             }
+        }
+    }
+}
 
+.user-feedback {
+    .rating-item {
+        border-bottom: 1px solid var(--muted);
+
+        .top {
+            .image-user-product-fb {
+                width: 50px;
+                height: 50px;
+            }
+
+            .badge {
+                width: fit-content;
+            }
+
+            .stars {
+                .bi-star {
+                    color: var(--primary);
+                }
+                .bi-star-fill {
+                    color: var(--primary);
+                }
+            }
+        }
+
+        .bottom {
+            span {
+                font-size: 1.2rem;
+                color: var(--muted-foreground);
+            }
         }
     }
 }
@@ -251,12 +281,59 @@ a {
     border-radius: 16px;
 }
 
+.combo {
+    .accordion {
+        .accordion-item {
+            border-bottom: 1px solid var(--muted) !important;
+        }
+
+        .accordion-header {
+            .accordion-button {
+                &:not(.collapsed) {
+                    color: var(--foreground);
+                    background-color: var(--background);
+                    box-shadow: none;
+                }
+                .image-product-combo {
+                    height: 80px;
+                    width: 80px;
+                }
+            }
+        }
+
+        .products {
+            padding: 24px;
+            .col {
+                .card {
+                    .image-skus {
+                        width: 100%;
+                        height: 150px;
+                    }
+                    .card-body {
+                        .card-title {
+                            color: var(--primary);
+                            font-size: 1.4rem;
+                        }
+
+                        .card-text {
+                            color: var(--muted-foreground);
+                            font-size: 0.8rem;
+                            text-decoration: line-through;
+                        }
+
+                        .card-quantity {
+                            color: var(--secondary);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 .tab-dashboard {
-    
     .nav-tabs {
-
         .nav-item {
-
             .nav-link {
                 color: var(--secondary);
 
@@ -387,10 +464,6 @@ a {
     object-fit: cover;
 }
 
-.image-product-combo {
-    width: 80px;
-    height: 80px;
-}
 .button-custom {
     width: fit-content;
 
@@ -709,4 +782,11 @@ a.sidebar-children {
 
 .card-setting {
     border-radius: 16px;
+}
+
+.product-blog {
+
+    &.active {
+        background-color: var(--primary);
+    }
 }
