--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -838,3 +838,39 @@ a.sidebar-children {
         border-collapse: collapse;
     }
 }
+
+.image-product-blog {
+    width: 50px;
+    height: 50px;
+}
+
+.remove-product-blog {
+    background-color: var(--background);
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: 1px solid var(--danger);
+    color: var(--danger);
+}
+
+.description-product-blog {
+    font-size: .8rem;
+    color: var(--muted-foreground);
+}
+
+.image-sku-combo {
+    width: 50px;
+    height: 50px;
+}
+
+.remove-sku-combo {
+    background-color: var(--background);
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: 1px solid var(--danger);
+    color: var(--danger);
+}
+
+.description-sku-combo {
+    font-size: .8rem;
+    color: var(--muted-foreground);
+}
