--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -839,6 +839,15 @@ a.sidebar-children {
     }
 }
 
+#choseSkus,
+#choseProducts {
+
+    .modal-body {
+        max-height: 500px;
+        overflow-y: auto;
+    }
+}
+
 .image-product-blog {
     width: 50px;
     height: 50px;
@@ -850,6 +859,14 @@ a.sidebar-children {
     border-radius: 8px;
     border: 1px solid var(--danger);
     color: var(--danger);
+}
+
+.cke_wysiwyg_frame,
+.cke_inner {
+    background-color: var(--background) !important;
+    body {
+        background-color: var(--background) !important;
+    }
 }
 
 .description-product-blog {
