--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -841,7 +841,6 @@ a.sidebar-children {
 
 #choseSkus,
 #choseProducts {
-
     .modal-body {
         max-height: 500px;
         overflow-y: auto;
@@ -870,7 +869,7 @@ a.sidebar-children {
 }
 
 .description-product-blog {
-    font-size: .8rem;
+    font-size: 0.8rem;
     color: var(--muted-foreground);
 }
 
@@ -888,6 +887,32 @@ a.sidebar-children {
 }
 
 .description-sku-combo {
-    font-size: .8rem;
+    font-size: 0.8rem;
     color: var(--muted-foreground);
+}
+
+.image-preview-upload {
+    width: 300px;
+    height: 300px;
+}
+
+#thumbnails {
+    .image-container {
+        position: relative;
+        height: 120px;
+        .close-btn {
+            position: absolute;
+            top: 6px;
+            right: 6px;
+            background: var(--background);
+            border-radius: 50%;
+            border: .3px solid var(--border);
+            color: var(--danger);
+            font-size: 1.6rem;
+        }
+    }
+}
+
+.image-setting-banner {
+    width: 100% !important;
 }
